change file location

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Yu Chen // Web Developer</title>
+  <title>Yu Chen // Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
@@ -23,7 +23,7 @@
           <a href="#work">Work</a>
         </li>  
         <li>
-          <a href="#contact-me">Contact Me</a>
+          <a href="#contact">Contact Me</a>
         </li>  
         <li>
           <!-- hyperlink to resume page -->
