--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
+    <img src="./assets/images/02-hero-bg.jpg" alt="hero-banner">
     <div>
       <h2>Cool subtitle here!</h2>
     </div>
@@ -53,12 +54,11 @@
       <section class="left-border">
         <!-- CSS grid for images -->
         <div class="potfolio">
-
           <figure class="portfolio-1">
             <!-- hyperlink to new page -->
             <!-- top image -->
             <a href="">
-              <img src="./assets/images/" class="portfolio-image" alt="Surf Report">
+              <img src="./assets/images/02-portfolio-4.jpg" class="portfolio-image" alt="Surf Report">
               <figcaption>Surf Report<br>MERN Stack</figcaption>
             </a>
           </figure>
@@ -66,7 +66,7 @@
           <figure class="portfolio-2">
             <!-- middle-left image -->
             <a href="">
-              <img src="./assets/images/" class="portfolio-image" alt="LED Wall">
+              <img src="./assets/images/02-portfolio-1.jpg" class="portfolio-image" alt="LED Wall">
               <figcaption>LED Wall<br>Node/IoT</figcaption>
             </a>
           </figure>
@@ -74,7 +74,7 @@
           <figure class="portfolio-3">
             <!-- middle-right image -->
             <a href="">
-              <img src="./assets/images/" class="portfolio-image" alt="Calculator">
+              <img src="./assets/images/02-portfolio-2.jpg" class="portfolio-image" alt="Calculator">
               <figcaption>Calculator<br>React/JavaScript/CSS</figcaption>
             </a>
           </figure>
@@ -82,7 +82,7 @@
           <figure class="portfolio-4">
             <!-- bottom-left image -->
             <a href="">
-              <img src="./assets/images/" class="portfolio-image" alt="Pastel Puzzels">
+              <img src="./assets/images/02-portfolio-3.jpg" class="portfolio-image" alt="Pastel Puzzels">
               <figcaption>Pastel Puzzels<br>MERN Stack</figcaption>
             </a>
           </figure>
@@ -90,7 +90,7 @@
           <figure class="portfolio-5">
             <!-- bottom-right image -->
             <a href="">
-              <img src="./assets/images/" class="portfolio-image" alt="Run Buddy">
+              <img src="./assets/images/02-run-buddy.jpg" class="portfolio-image" alt="Run Buddy">
               <figcaption>Run Buddy<br>HTML/CSS</figcaption>
             </a>
           </figure>         
