add style CSS and media quary

--- a/index.html
+++ b/index.html
@@ -27,97 +27,110 @@
         </li>  
         <li>
           <!-- hyperlink to resume page -->
-          <a href="./resume.html#resume">Resume</a>
+          <a href="./assets/images/Yu Chen (14).pdf">Resume</a>
         </li>
       </ul>
     </nav>
   </header>
 
   <!-- hero banner -->
-  <section class="hero-banner">
-    <img src="./assets/images/02-hero-bg.jpg" alt="hero-banner">
-    <div>
-      <h2>Cool subtitle here!</h2>
+  <section class="hero-banner section">
+    <div id="banner">
+      <h2>Hi there!</h2>
     </div>
   </section>
 
   <main class="page-wrapper">
     <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About Me</h2>
-      <p class="left-border">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui, nulla ea aspernatur suscipit sapiente laudantium eveniet commodi voluptates ipsa ducimus molestiae, eaque obcaecati. Ex deserunt et recusandae quas facere.</p>
+    <section class="page-about section" id="about">
+      <div class="content-and-divider">
+        <h2>About Me</h2>
+        <div id="content-divider"></div>
+      </div>
+      <p class="left-border" id="about-me-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui, nulla ea aspernatur suscipit sapiente laudantium eveniet commodi voluptates ipsa ducimus molestiae, eaque obcaecati. Ex deserunt et recusandae quas facere.</p>
     </section>
 
     <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-      <section class="left-border">
+    <section class="page-work section" id="work">
+      <div class="content-and-divider">
+        <h2 id="work-text">Work</h2>
+       <div id="content-divider"></div>
+      </div>
         <!-- CSS grid for images -->
-        <div class="potfolio">
+        <div class="portfolio">
           <figure class="portfolio-1">
             <!-- hyperlink to new page -->
             <!-- top image -->
             <a href="">
-              <img src="./assets/images/02-portfolio-4.jpg" class="portfolio-image" alt="Surf Report">
+              <img src="./assets/images/02-portfolio-4.jpg" class="portfolio-image" id="img1" alt="Surf Report">
               <figcaption>Surf Report<br>MERN Stack</figcaption>
             </a>
           </figure>
 
-          <figure class="portfolio-2">
-            <!-- middle-left image -->
-            <a href="">
-              <img src="./assets/images/02-portfolio-1.jpg" class="portfolio-image" alt="LED Wall">
-              <figcaption>LED Wall<br>Node/IoT</figcaption>
-            </a>
-          </figure>
 
-          <figure class="portfolio-3">
-            <!-- middle-right image -->
-            <a href="">
-              <img src="./assets/images/02-portfolio-2.jpg" class="portfolio-image" alt="Calculator">
-              <figcaption>Calculator<br>React/JavaScript/CSS</figcaption>
-            </a>
-          </figure>
 
-          <figure class="portfolio-4">
-            <!-- bottom-left image -->
-            <a href="">
-              <img src="./assets/images/02-portfolio-3.jpg" class="portfolio-image" alt="Pastel Puzzels">
-              <figcaption>Pastel Puzzels<br>MERN Stack</figcaption>
-            </a>
-          </figure>
+          <div id="two-rows">
+            <figure class="portfolio-2">
+              <!-- middle-left image -->
+              <a href="">
+                <img src="./assets/images/02-portfolio-1.jpg" class="portfolio-image" alt="LED Wall">
+                <figcaption>LED Wall<br>Node/IoT</figcaption>
+              </a>
+            </figure>
+  
+            <figure class="portfolio-3">
+              <!-- middle-right image -->
+              <a href="">
+                <img src="./assets/images/02-portfolio-2.jpg" class="portfolio-image" alt="Calculator">
+                <figcaption>Calculator<br>React/JavaScript/CSS</figcaption>
+              </a>
+            </figure>
+  
+            <figure class="portfolio-4">
+              <!-- bottom-left image -->
+              <a href="">
+                <img src="./assets/images/02-portfolio-3.jpg" class="portfolio-image" alt="Pastel Puzzels">
+                <figcaption>Pastel Puzzels<br>MERN Stack</figcaption>
+              </a>
+            </figure>
+  
+            <figure class="portfolio-5">
+              <!-- bottom-right image -->
+              <a href="">
+                <img src="./assets/images/02-run-buddy.jpg" class="portfolio-image" alt="Run Buddy">
+                <figcaption>Run Buddy<br>HTML/CSS</figcaption>
+              </a>
+            </figure>
 
-          <figure class="portfolio-5">
-            <!-- bottom-right image -->
-            <a href="">
-              <img src="./assets/images/02-run-buddy.jpg" class="portfolio-image" alt="Run Buddy">
-              <figcaption>Run Buddy<br>HTML/CSS</figcaption>
-            </a>
-          </figure>         
+          </div>
+
+                  
         </div>
-      </section>
     </section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+    <section class="page-contact section" id="contact">
+      <div class="content-and-divider">
       <h2>Contact Me</h2>
+      <div id="content-divider"></div>
+      </div>
       <div class="contact-title">
         <!-- unordered listed -->
         <ul>
           <li>
-            <a href="#number">+44 757 9876 869</a>
+            <a href="#">+44 757 9876 869</a>
           </li>
           <li>
-            <a href="#email">yuchenwork57@gmail.com</a>
+            <a href="#">yuchenwork57@gmail.com</a>
           </li>
           <li>
-            <a href="#github">Github</a>
+            <a href="https://github.com/cherryyeer">Github</a>
           </li>
           <li>
-            <a href="#twitter">Twitter</a>
+            <a href="https://www.behance.net/yuchen57">Behance</a>
           </li>
           <li>
-            <a href="#spotify">Spotify</a>
+            <a href="https://www.linkedin.com/in/yu-c-a281341a0/">Linkedin</a>
           </li>
         </ul>
       </div>
