--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <!-- main logo / nav -->
   <header>
+   <div id="name-and-picture">
     <h1>Yu Chen</h1>
+    <image id="avatar" src="./assets/images/IMG_2040.jpg" alt="avatar"/>
+   </div>
     <nav>
       <!-- Add unordered list navigator -->
       <ul>
